# concordia-chat-app

./: go.work.sum  package-lock.json  tasks.md
.claude/: settings.local.json
apps/desktop-app/: main.js  package.json
apps/web-app/: jest.config.ts  middleware.ts  package-lock.json  package.json
apps/web-app/app/: layout.tsx
apps/web-app/app/actions/: auth.ts
apps/web-app/app/app/: layout.tsx
apps/web-app/app/components/: ChannelSidebar.tsx  ChannelView.tsx  MessageList.tsx  ServerSidebar.tsx  VoiceChannelView.tsx
apps/web-app/app/lib/: api.ts
apps/web-app/app/login/: page.tsx
apps/web-app/app/register/: page.tsx
apps/web-app/app/servers/[id]/: page.tsx
apps/web-app/components/: CreateServerModal.tsx  LogoutButton.tsx  ServerSidebar.tsx
apps/web-app/lib/: api.ts
concordia-app/: package-lock.json  package.json  tsconfig.json
contracts/openapi/: gateway.yaml
docs/: auth-service-tasks.md
infra/: .env.example  docker-compose.yml
infra/cassandra/: init.cql
infra/certs/: cert.pem  key.pem
infra/waf/: nginx.conf
infra/waf/modsecurity/: main.conf
services/auth/: Dockerfile  pom.xml
services/auth/src/main/resources/: application.yml
services/chat/: Cargo.toml  Dockerfile  build.rs  init.cql
services/chat/proto/: permissions.proto
services/chat/src/: main.rs
services/gateway/: go.mod  go.sum  main.go  server.go  server_test.go
services/gateway/middleware/: auth.go  logger.go  rate_limit.go  rate_limit_test.go
services/gateway/ws/: consumer.go  handler.go  handler_test.go  hub.go
services/presence/: handler.go  main.go
services/servers/: pom.xml
services/voice/: main.py  requirements.txt  signaling.py  test_signaling.py
(+16 files in other folders)
