[package]
name = "chat-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "net", "time"] }
tower-http = { version = "0.5", features = ["trace"] }
scylla = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v1", "v4"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
chrono = "0.4"
aws-sdk-s3 = "1"
bytes = "1"